--- a/app/views/docs/show.html.erb
+++ b/app/views/docs/show.html.erb
@@ -1,6 +1,10 @@
-<h1> <%= @doc.title %> </h1> 
-<p> <%= @doc.content %> </p>
-
-<%= link_to "All docs", docs_path %>
-<%= link_to "Fix doc", edit_doc_path(@doc) %>
-<%= link_to "Delete doc", doc_path(@doc), method: :delete, data: {confirm: "Are you sure?"} %>
+<div class="wrapper_with_padding">
+	<div id="doc_show">
+		<h1 class="title"> <%= @doc.title %> </h1> 
+		<p> <%= simple_format(@doc.content) %> </p>
+		<div class="buttons">
+			<%= link_to "Fix doc", edit_doc_path(@doc), class: "button" %>
+			<%= link_to "Delete doc", doc_path(@doc), method: :delete, data: {confirm: "Are you sure?"}, class: "button" %>
+		</div>
+	</div>
+</div>
