--- a/app/views/docs/edit.html.erb
+++ b/app/views/docs/edit.html.erb
@@ -1,4 +1,5 @@
-<h1> Fix Doc! </h1>
-
-<%= render 'form' %>
-<%= link_to "Cancel", docs_path %>
+<div class="wrapper_with_padding">
+	<h1> Fix Doc! </h1>
+	<%= render 'form' %>
+	<%= link_to "Cancel", docs_path %>
+</div>
